--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
   </head>
   <body>
     <section>
-      <div class="container">
-      
-        <div class="row vh-100" id="game-board"></div>
-        <button class="btn btn-restart" id="restart-button">
+      <div class="container ortala">
+        <button class="btn btn-restart my-1" id="restart-button">
           Oyunu Yeniden Başlat
         </button>
+        <div class="row vh-100" id="game-board"></div>
+
         <div class="row mt-5">
-            <div class="col-12 text-center">
-              <img src="./icons/baslik.png" alt="başlık" />
-            </div>
+          <div class="col-12 text-center">
+            <img src="./icons/baslik.png" alt="başlık" />
           </div>
+        </div>
       </div>
     </section>
   </body>
