--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
   </head>
   <body>
     <section>
-      <div class="container ortala">
-        <button class="btn btn-restart my-1" id="restart-button">
-          Oyunu Yeniden Başlat
-        </button>
-        <div class="row vh-100" id="game-board"></div>
-
-        <div class="row mt-5">
-          <div class="col-12 text-center">
-            <img src="./icons/baslik.png" alt="başlık" />
-          </div>
+    
+        <div id="ortala" class="container ortala">
+          <button onclick="resetGame()" class="btn btn-restart my-1" id="restart-button">
+            Oyunu Yeniden Başlat
+          </button>
+          <div class="row" id="game-board"></div>
+          <div class="row">
+            <div class="col-12">
+              <img src="./icons/baslik.png" alt="başlık" style="max-width: 100%; max-height: 100%;">
+            </div>
+          </div> 
         </div>
-      </div>
+   
     </section>
   </body>
   <script
